--- a/contracts/blind_box/Cargo.toml
+++ b/contracts/blind_box/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kpt_fund"
+name = "blind_box"
 version = "0.1.0"
 edition = "2021"
 authors = ["simba.dto"]
@@ -31,8 +31,9 @@ serde = { version = "1.0.163", default-features = false, features = ["derive"] }
 cosmwasm-schema = "1.2.5"
 thiserror = "1.0.40"
 cw2 = "1.0.1"
-cw20 = { version = "1.0.1" }
-cw20-base = { version = "1.0.1" ,features = ["library"] }
+cw721-base = { version = "0.17.0", features = ["library"] }
+#cw721-base = "0.17.0"
+cw721 = "0.17.0"
 cw-utils = "1.0.1"
 serde_json = "1.0.64"
 
