--- a/contracts/blind_box/schema/raw/response_to_query_blind_box_config_level.json
+++ b/contracts/blind_box/schema/raw/response_to_query_blind_box_config_level.json
@@ -3,11 +3,18 @@
   "title": "BlindBoxConfigLevelResponse",
   "type": "object",
   "required": [
+    "level_index",
     "mint_total_count",
     "minted_count",
-    "price"
+    "price",
+    "received_total_amount"
   ],
   "properties": {
+    "level_index": {
+      "type": "integer",
+      "format": "uint8",
+      "minimum": 0.0
+    },
     "mint_total_count": {
       "type": "integer",
       "format": "uint128",
@@ -19,6 +26,11 @@
       "minimum": 0.0
     },
     "price": {
+      "type": "integer",
+      "format": "uint128",
+      "minimum": 0.0
+    },
+    "received_total_amount": {
       "type": "integer",
       "format": "uint128",
       "minimum": 0.0
