--- a/contracts/blind_box_reward/schema/raw/response_to_query_all_config_and_state.json
+++ b/contracts/blind_box_reward/schema/raw/response_to_query_all_config_and_state.json
@@ -28,7 +28,10 @@
       "type": "object",
       "required": [
         "box_open_time",
+        "box_reward_distribute_addr",
+        "box_reward_distribute_rule_type",
         "box_reward_token",
+        "global_reward_total_amount",
         "ordinary_box_reward_level_config",
         "random_box_reward_rule_config",
         "random_in_box_level_index"
@@ -39,8 +42,19 @@
           "format": "uint64",
           "minimum": 0.0
         },
+        "box_reward_distribute_addr": {
+          "$ref": "#/definitions/Addr"
+        },
+        "box_reward_distribute_rule_type": {
+          "type": "string"
+        },
         "box_reward_token": {
           "$ref": "#/definitions/Addr"
+        },
+        "global_reward_total_amount": {
+          "type": "integer",
+          "format": "uint128",
+          "minimum": 0.0
         },
         "ordinary_box_reward_level_config": {
           "type": "object",
@@ -64,6 +78,8 @@
     "BoxRewardConfigState": {
       "type": "object",
       "required": [
+        "global_reward_claim_index",
+        "global_reward_claim_total_amount",
         "ordinary_box_reward_level_config_state",
         "ordinary_total_open_box_count",
         "ordinary_total_reward_amount",
@@ -72,6 +88,16 @@
         "random_total_reward_amount"
       ],
       "properties": {
+        "global_reward_claim_index": {
+          "type": "integer",
+          "format": "uint128",
+          "minimum": 0.0
+        },
+        "global_reward_claim_total_amount": {
+          "type": "integer",
+          "format": "uint128",
+          "minimum": 0.0
+        },
         "ordinary_box_reward_level_config_state": {
           "type": "object",
           "additionalProperties": {
