add inviter reward box mint and claim

--- a/contracts/kpt/schema/raw/response_to_kpt_config.json
+++ b/contracts/kpt/schema/raw/response_to_kpt_config.json
@@ -4,11 +4,15 @@
   "type": "object",
   "required": [
     "gov",
+    "kpt_distribute",
     "kpt_fund",
     "max_supply"
   ],
   "properties": {
     "gov": {
+      "$ref": "#/definitions/Addr"
+    },
+    "kpt_distribute": {
       "$ref": "#/definitions/Addr"
     },
     "kpt_fund": {
