--- a/contracts/kpt_fund/Cargo.toml
+++ b/contracts/kpt_fund/Cargo.toml
@@ -32,11 +32,11 @@ cosmwasm-schema = "1.2.5"
 thiserror = "1.0.40"
 cw2 = "1.0.1"
 cw20 = { version = "1.0.1" }
-cw20-base = { version = "1.0.1" ,features = ["library"] }
+cw20-base = { version = "1.0.1", features = ["library"] }
 cw-utils = "1.0.1"
 serde_json = "1.0.64"
-ve_kpt = {path = "../ve_kpt"}
-kpt = {path = "../kpt"}
+ve_kpt = { path = "../ve_kpt", version = "0.1.0", features = ["library"] }
+kpt = { path = "../kpt", version = "0.1.0", features = ["library"] }
 
 [dev-dependencies]
 cw-multi-test = "0.16.5"
