--- a/contracts/treasure/schema/treasure.json
+++ b/contracts/treasure/schema/treasure.json
@@ -7,19 +7,24 @@
     "title": "InstantiateMsg",
     "type": "object",
     "required": [
-      "end_time",
-      "integral_reward_coefficient",
-      "lock_duration",
+      "dust_reward_per_second",
+      "end_lock_time",
       "lock_token",
-      "mint_nft_cost_integral",
+      "mint_nft_cost_dust",
       "mod_num",
-      "punish_coefficient",
+      "nft_end_pre_mint_time",
+      "nft_start_pre_mint_time",
+      "no_delay_punish_coefficient",
       "punish_receiver",
-      "start_time",
-      "winning_num"
+      "start_lock_time",
+      "winning_num",
+      "withdraw_delay_duration"
     ],
     "properties": {
-      "end_time": {
+      "dust_reward_per_second": {
+        "$ref": "#/definitions/Uint128"
+      },
+      "end_lock_time": {
         "type": "integer",
         "format": "uint64",
         "minimum": 0.0
@@ -34,18 +39,10 @@
           }
         ]
       },
-      "integral_reward_coefficient": {
-        "$ref": "#/definitions/Uint128"
-      },
-      "lock_duration": {
-        "type": "integer",
-        "format": "uint64",
-        "minimum": 0.0
-      },
       "lock_token": {
         "$ref": "#/definitions/Addr"
       },
-      "mint_nft_cost_integral": {
+      "mint_nft_cost_dust": {
         "$ref": "#/definitions/Uint128"
       },
       "mod_num": {
@@ -53,13 +50,23 @@
         "format": "uint64",
         "minimum": 0.0
       },
-      "punish_coefficient": {
+      "nft_end_pre_mint_time": {
+        "type": "integer",
+        "format": "uint64",
+        "minimum": 0.0
+      },
+      "nft_start_pre_mint_time": {
+        "type": "integer",
+        "format": "uint64",
+        "minimum": 0.0
+      },
+      "no_delay_punish_coefficient": {
         "$ref": "#/definitions/Uint128"
       },
       "punish_receiver": {
         "$ref": "#/definitions/Addr"
       },
-      "start_time": {
+      "start_lock_time": {
         "type": "integer",
         "format": "uint64",
         "minimum": 0.0
@@ -72,6 +79,11 @@
           "minimum": 0.0
         },
         "uniqueItems": true
+      },
+      "withdraw_delay_duration": {
+        "type": "integer",
+        "format": "uint64",
+        "minimum": 0.0
       }
     },
     "additionalProperties": false,
@@ -121,6 +133,27 @@
         ],
         "properties": {
           "user_withdraw": {
+            "type": "object",
+            "required": [
+              "amount"
+            ],
+            "properties": {
+              "amount": {
+                "$ref": "#/definitions/Uint128"
+              }
+            },
+            "additionalProperties": false
+          }
+        },
+        "additionalProperties": false
+      },
+      {
+        "type": "object",
+        "required": [
+          "user_unlock"
+        ],
+        "properties": {
+          "user_unlock": {
             "type": "object",
             "required": [
               "amount"
@@ -192,7 +225,17 @@
       "TreasureConfigMsg": {
         "type": "object",
         "properties": {
-          "end_time": {
+          "dust_reward_per_second": {
+            "anyOf": [
+              {
+                "$ref": "#/definitions/Uint128"
+              },
+              {
+                "type": "null"
+              }
+            ]
+          },
+          "end_lock_time": {
             "type": [
               "integer",
               "null"
@@ -210,24 +253,6 @@
               }
             ]
           },
-          "integral_reward_coefficient": {
-            "anyOf": [
-              {
-                "$ref": "#/definitions/Uint128"
-              },
-              {
-                "type": "null"
-              }
-            ]
-          },
-          "lock_duration": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "uint64",
-            "minimum": 0.0
-          },
           "lock_token": {
             "anyOf": [
               {
@@ -238,7 +263,7 @@
               }
             ]
           },
-          "mint_nft_cost_integral": {
+          "mint_nft_cost_dust": {
             "anyOf": [
               {
                 "$ref": "#/definitions/Uint128"
@@ -256,7 +281,23 @@
             "format": "uint64",
             "minimum": 0.0
           },
-          "punish_coefficient": {
+          "nft_end_pre_mint_time": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "uint64",
+            "minimum": 0.0
+          },
+          "nft_start_pre_mint_time": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "uint64",
+            "minimum": 0.0
+          },
+          "no_delay_punish_coefficient": {
             "anyOf": [
               {
                 "$ref": "#/definitions/Uint128"
@@ -276,7 +317,7 @@
               }
             ]
           },
-          "start_time": {
+          "start_lock_time": {
             "type": [
               "integer",
               "null"
@@ -295,6 +336,14 @@
               "minimum": 0.0
             },
             "uniqueItems": true
+          },
+          "withdraw_delay_duration": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "uint64",
+            "minimum": 0.0
           }
         },
         "additionalProperties": false
@@ -331,11 +380,11 @@
           "query_user_infos": {
             "type": "object",
             "required": [
-              "msg"
+              "user"
             ],
             "properties": {
-              "msg": {
-                "$ref": "#/definitions/QueryUserInfosMsg"
+              "user": {
+                "$ref": "#/definitions/Addr"
               }
             },
             "additionalProperties": false
@@ -348,48 +397,6 @@
       "Addr": {
         "description": "A human readable address.\n\nIn Cosmos, this is typically bech32 encoded. But for multi-chain smart contracts no assumptions should be made other than being UTF-8 encoded and of reasonable length.\n\nThis type represents a validated address. It can be created in the following ways 1. Use `Addr::unchecked(input)` 2. Use `let checked: Addr = deps.api.addr_validate(input)?` 3. Use `let checked: Addr = deps.api.addr_humanize(canonical_addr)?` 4. Deserialize from JSON. This must only be done from JSON that was validated before such as a contract's state. `Addr` must not be used in messages sent by the user because this would result in unvalidated instances.\n\nThis type is immutable. If you really need to mutate it (Really? Are you sure?), create a mutable copy using `let mut mutable = Addr::to_string()` and operate on that `String` instance.",
         "type": "string"
-      },
-      "QueryUserInfosMsg": {
-        "type": "object",
-        "required": [
-          "query_lock_records",
-          "query_mint_nft_records",
-          "query_user_state",
-          "query_withdraw_records",
-          "user_addr"
-        ],
-        "properties": {
-          "limit": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "uint32",
-            "minimum": 0.0
-          },
-          "query_lock_records": {
-            "type": "boolean"
-          },
-          "query_mint_nft_records": {
-            "type": "boolean"
-          },
-          "query_user_state": {
-            "type": "boolean"
-          },
-          "query_withdraw_records": {
-            "type": "boolean"
-          },
-          "start_after": {
-            "type": [
-              "string",
-              "null"
-            ]
-          },
-          "user_addr": {
-            "$ref": "#/definitions/Addr"
-          }
-        },
-        "additionalProperties": false
       }
     }
   },
@@ -421,20 +428,25 @@
         "TreasureConfig": {
           "type": "object",
           "required": [
-            "end_time",
+            "dust_reward_per_second",
+            "end_lock_time",
             "gov",
-            "integral_reward_coefficient",
-            "lock_duration",
             "lock_token",
-            "mint_nft_cost_integral",
+            "mint_nft_cost_dust",
             "mod_num",
-            "punish_coefficient",
+            "nft_end_pre_mint_time",
+            "nft_start_pre_mint_time",
+            "no_delay_punish_coefficient",
             "punish_receiver",
-            "start_time",
-            "winning_num"
+            "start_lock_time",
+            "winning_num",
+            "withdraw_delay_duration"
           ],
           "properties": {
-            "end_time": {
+            "dust_reward_per_second": {
+              "$ref": "#/definitions/Uint128"
+            },
+            "end_lock_time": {
               "type": "integer",
               "format": "uint64",
               "minimum": 0.0
@@ -442,18 +454,10 @@
             "gov": {
               "$ref": "#/definitions/Addr"
             },
-            "integral_reward_coefficient": {
-              "$ref": "#/definitions/Uint128"
-            },
-            "lock_duration": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            },
             "lock_token": {
               "$ref": "#/definitions/Addr"
             },
-            "mint_nft_cost_integral": {
+            "mint_nft_cost_dust": {
               "$ref": "#/definitions/Uint128"
             },
             "mod_num": {
@@ -461,13 +465,23 @@
               "format": "uint64",
               "minimum": 0.0
             },
-            "punish_coefficient": {
+            "nft_end_pre_mint_time": {
+              "type": "integer",
+              "format": "uint64",
+              "minimum": 0.0
+            },
+            "nft_start_pre_mint_time": {
+              "type": "integer",
+              "format": "uint64",
+              "minimum": 0.0
+            },
+            "no_delay_punish_coefficient": {
               "$ref": "#/definitions/Uint128"
             },
             "punish_receiver": {
               "$ref": "#/definitions/Addr"
             },
-            "start_time": {
+            "start_lock_time": {
               "type": "integer",
               "format": "uint64",
               "minimum": 0.0
@@ -480,25 +494,35 @@
                 "minimum": 0.0
               },
               "uniqueItems": true
+            },
+            "withdraw_delay_duration": {
+              "type": "integer",
+              "format": "uint64",
+              "minimum": 0.0
             }
           }
         },
         "TreasureState": {
           "type": "object",
           "required": [
-            "current_integral_amount",
             "current_locked_amount",
+            "current_unlock_amount",
+            "total_cost_dust_amount",
             "total_locked_amount",
             "total_lose_nft_num",
             "total_punish_amount",
+            "total_unlock_amount",
             "total_win_nft_num",
             "total_withdraw_amount"
           ],
           "properties": {
-            "current_integral_amount": {
+            "current_locked_amount": {
               "$ref": "#/definitions/Uint128"
             },
-            "current_locked_amount": {
+            "current_unlock_amount": {
+              "$ref": "#/definitions/Uint128"
+            },
+            "total_cost_dust_amount": {
               "$ref": "#/definitions/Uint128"
             },
             "total_locked_amount": {
@@ -510,6 +534,9 @@
               "minimum": 0.0
             },
             "total_punish_amount": {
+              "$ref": "#/definitions/Uint128"
+            },
+            "total_unlock_amount": {
               "$ref": "#/definitions/Uint128"
             },
             "total_win_nft_num": {
@@ -532,73 +559,48 @@
       "$schema": "http://json-schema.org/draft-07/schema#",
       "title": "UserInfosResponse",
       "type": "object",
+      "required": [
+        "user_state"
+      ],
       "properties": {
-        "lock_records": {
-          "type": [
-            "array",
-            "null"
-          ],
-          "items": {
-            "$ref": "#/definitions/UserLockRecord"
-          }
-        },
-        "mint_nft_records": {
-          "type": [
-            "array",
-            "null"
-          ],
-          "items": {
-            "$ref": "#/definitions/UserMintNftRecord"
-          }
-        },
         "user_state": {
-          "anyOf": [
-            {
-              "$ref": "#/definitions/TreasureUserState"
-            },
-            {
-              "type": "null"
-            }
-          ]
-        },
-        "withdraw_records": {
-          "type": [
-            "array",
-            "null"
-          ],
-          "items": {
-            "$ref": "#/definitions/UserWithdrawRecord"
-          }
+          "$ref": "#/definitions/TreasureUserState"
         }
       },
       "additionalProperties": false,
       "definitions": {
-        "Addr": {
-          "description": "A human readable address.\n\nIn Cosmos, this is typically bech32 encoded. But for multi-chain smart contracts no assumptions should be made other than being UTF-8 encoded and of reasonable length.\n\nThis type represents a validated address. It can be created in the following ways 1. Use `Addr::unchecked(input)` 2. Use `let checked: Addr = deps.api.addr_validate(input)?` 3. Use `let checked: Addr = deps.api.addr_humanize(canonical_addr)?` 4. Deserialize from JSON. This must only be done from JSON that was validated before such as a contract's state. `Addr` must not be used in messages sent by the user because this would result in unvalidated instances.\n\nThis type is immutable. If you really need to mutate it (Really? Are you sure?), create a mutable copy using `let mut mutable = Addr::to_string()` and operate on that `String` instance.",
-          "type": "string"
-        },
         "TreasureUserState": {
           "type": "object",
           "required": [
-            "current_integral_amount",
+            "current_dust_amount",
             "current_locked_amount",
-            "end_lock_time",
+            "current_unlock_amount",
+            "last_lock_time",
+            "last_unlock_time",
             "lose_nft_num",
-            "start_lock_time",
-            "total_cost_integral_amount",
+            "total_cost_dust_amount",
             "total_locked_amount",
             "total_punish_amount",
+            "total_unlock_amount",
             "total_withdraw_amount",
             "win_nft_num"
           ],
           "properties": {
-            "current_integral_amount": {
+            "current_dust_amount": {
               "$ref": "#/definitions/Uint128"
             },
             "current_locked_amount": {
               "$ref": "#/definitions/Uint128"
             },
-            "end_lock_time": {
+            "current_unlock_amount": {
+              "$ref": "#/definitions/Uint128"
+            },
+            "last_lock_time": {
+              "type": "integer",
+              "format": "uint64",
+              "minimum": 0.0
+            },
+            "last_unlock_time": {
               "type": "integer",
               "format": "uint64",
               "minimum": 0.0
@@ -608,18 +610,16 @@
               "format": "uint64",
               "minimum": 0.0
             },
-            "start_lock_time": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            },
-            "total_cost_integral_amount": {
+            "total_cost_dust_amount": {
               "$ref": "#/definitions/Uint128"
             },
             "total_locked_amount": {
               "$ref": "#/definitions/Uint128"
             },
             "total_punish_amount": {
+              "$ref": "#/definitions/Uint128"
+            },
+            "total_unlock_amount": {
               "$ref": "#/definitions/Uint128"
             },
             "total_withdraw_amount": {
@@ -635,119 +635,6 @@
         "Uint128": {
           "description": "A thin wrapper around u128 that is using strings for JSON encoding/decoding, such that the full u128 range can be used for clients that convert JSON numbers to floats, like JavaScript and jq.\n\n# Examples\n\nUse `from` to create instances of this and `u128` to get the value out:\n\n``` # use cosmwasm_std::Uint128; let a = Uint128::from(123u128); assert_eq!(a.u128(), 123);\n\nlet b = Uint128::from(42u64); assert_eq!(b.u128(), 42);\n\nlet c = Uint128::from(70u32); assert_eq!(c.u128(), 70); ```",
           "type": "string"
-        },
-        "UserLockRecord": {
-          "type": "object",
-          "required": [
-            "end_lock_time",
-            "integral_reward_coefficient",
-            "lock_amount",
-            "lock_duration",
-            "record_id",
-            "start_lock_time",
-            "user_addr"
-          ],
-          "properties": {
-            "end_lock_time": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            },
-            "integral_reward_coefficient": {
-              "$ref": "#/definitions/Uint128"
-            },
-            "lock_amount": {
-              "$ref": "#/definitions/Uint128"
-            },
-            "lock_duration": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            },
-            "record_id": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            },
-            "start_lock_time": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            },
-            "user_addr": {
-              "$ref": "#/definitions/Addr"
-            }
-          }
-        },
-        "UserMintNftRecord": {
-          "type": "object",
-          "required": [
-            "mint_nft_cost_integral_amount",
-            "mint_nft_num",
-            "mint_time",
-            "record_id",
-            "user_addr",
-            "win_nft_num"
-          ],
-          "properties": {
-            "mint_nft_cost_integral_amount": {
-              "$ref": "#/definitions/Uint128"
-            },
-            "mint_nft_num": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            },
-            "mint_time": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            },
-            "record_id": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            },
-            "user_addr": {
-              "$ref": "#/definitions/Addr"
-            },
-            "win_nft_num": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            }
-          }
-        },
-        "UserWithdrawRecord": {
-          "type": "object",
-          "required": [
-            "punish_amount",
-            "record_id",
-            "user_addr",
-            "withdraw_amount",
-            "withdraw_time"
-          ],
-          "properties": {
-            "punish_amount": {
-              "$ref": "#/definitions/Uint128"
-            },
-            "record_id": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            },
-            "user_addr": {
-              "$ref": "#/definitions/Addr"
-            },
-            "withdraw_amount": {
-              "$ref": "#/definitions/Uint128"
-            },
-            "withdraw_time": {
-              "type": "integer",
-              "format": "uint64",
-              "minimum": 0.0
-            }
-          }
         }
       }
     }
