remove regret logic code

--- a/contracts/dispatcher/schema/raw/response_to_query_global_config.json
+++ b/contracts/dispatcher/schema/raw/response_to_query_global_config.json
@@ -25,25 +25,16 @@
       "required": [
         "claim_token",
         "duration_per_period",
-        "end_regret_time",
         "gov",
         "periods",
-        "regret_token_receiver",
         "start_lock_period_time",
-        "start_time",
-        "total_lock_amount",
-        "total_unlock_amount"
+        "total_lock_amount"
       ],
       "properties": {
         "claim_token": {
           "$ref": "#/definitions/Addr"
         },
         "duration_per_period": {
-          "type": "integer",
-          "format": "uint64",
-          "minimum": 0.0
-        },
-        "end_regret_time": {
           "type": "integer",
           "format": "uint64",
           "minimum": 0.0
@@ -56,23 +47,12 @@
           "format": "uint64",
           "minimum": 0.0
         },
-        "regret_token_receiver": {
-          "$ref": "#/definitions/Addr"
-        },
         "start_lock_period_time": {
           "type": "integer",
           "format": "uint64",
           "minimum": 0.0
         },
-        "start_time": {
-          "type": "integer",
-          "format": "uint64",
-          "minimum": 0.0
-        },
         "total_lock_amount": {
-          "$ref": "#/definitions/Uint256"
-        },
-        "total_unlock_amount": {
           "$ref": "#/definitions/Uint256"
         }
       }
@@ -81,21 +61,13 @@
       "type": "object",
       "required": [
         "total_user_claimed_lock_amount",
-        "total_user_claimed_unlock_amount",
-        "total_user_lock_amount",
-        "total_user_unlock_amount"
+        "total_user_lock_amount"
       ],
       "properties": {
         "total_user_claimed_lock_amount": {
           "$ref": "#/definitions/Uint256"
         },
-        "total_user_claimed_unlock_amount": {
-          "$ref": "#/definitions/Uint256"
-        },
         "total_user_lock_amount": {
-          "$ref": "#/definitions/Uint256"
-        },
-        "total_user_unlock_amount": {
           "$ref": "#/definitions/Uint256"
         }
       }
