Add the cap and total supply checks of token and ve_token in the ve_fund_mint method of the fund module and the add_rule_config of distribute.

--- a/contracts/fund/schema/raw/response_to_fund_config.json
+++ b/contracts/fund/schema/raw/response_to_fund_config.json
@@ -52,6 +52,16 @@
     "seilor_addr": {
       "$ref": "#/definitions/Addr"
     },
+    "token_cap": {
+      "anyOf": [
+        {
+          "$ref": "#/definitions/Uint128"
+        },
+        {
+          "type": "null"
+        }
+      ]
+    },
     "ve_seilor_addr": {
       "$ref": "#/definitions/Addr"
     }
