--- a/contracts/distribute/Cargo.toml
+++ b/contracts/distribute/Cargo.toml
@@ -36,6 +36,7 @@ cw20-base = { version = "1.0.1", features = ["library"] }
 cw-utils = "1.0.1"
 serde_json = "1.0.64"
 seilor = { version = "0.1.0", path = "../seilor", features = ["library"] }
+ve_seilor = { path = "../ve_seilor", version = "0.1.0", features = ["library"] }
 
 [dev-dependencies]
 cosmwasm-schema = "1.2.5"
