Add the new owner/gov field to the configuration query as the returned result

--- a/contracts/seilor/schema/raw/response_to_seilor_config.json
+++ b/contracts/seilor/schema/raw/response_to_seilor_config.json
@@ -22,6 +22,16 @@
       "type": "integer",
       "format": "uint128",
       "minimum": 0.0
+    },
+    "new_gov": {
+      "anyOf": [
+        {
+          "$ref": "#/definitions/Addr"
+        },
+        {
+          "type": "null"
+        }
+      ]
     }
   },
   "additionalProperties": false,
