--- a/contracts/ve_seilor/schema/raw/response_to_vote_config.json
+++ b/contracts/ve_seilor/schema/raw/response_to_vote_config.json
@@ -24,6 +24,16 @@
       "format": "uint128",
       "minimum": 0.0
     },
+    "new_gov": {
+      "anyOf": [
+        {
+          "$ref": "#/definitions/Addr"
+        },
+        {
+          "type": "null"
+        }
+      ]
+    },
     "total_minted": {
       "$ref": "#/definitions/Uint128"
     }
