add cross_chain_swap_contract filed in seilor

--- a/contracts/seilor/schema/raw/response_to_seilor_config.json
+++ b/contracts/seilor/schema/raw/response_to_seilor_config.json
@@ -9,6 +9,16 @@
     "max_supply"
   ],
   "properties": {
+    "cross_chain_swap_contract": {
+      "anyOf": [
+        {
+          "$ref": "#/definitions/Addr"
+        },
+        {
+          "type": "null"
+        }
+      ]
+    },
     "distribute": {
       "$ref": "#/definitions/Addr"
     },
